# geometry

./: CMakeLists.txt  README.md
include/: angle.h  angle.inl  geometry.h  mat3.h  mat3.inl  mat4.h  mat4.inl  norm3.h  point3.inl  print.h  quat.h  quat.inl  sampling.h  scientific.h  scientific.inl  uv2.h  vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.inl
include/geo/: geometry.h
include/geo/color/: color3.h  color3.inl  color4.h  color4.inl
include/geo/core/: print.h  sfinae.h  types.h
include/geo/math/: aabbox.h  aabbox.inl  angle.h  angle.inl  coordinates.h  coordinates.inl  frustum.h  frustum.inl  half.h  half.inl  random.h  random.inl  sampling.h  sampling.inl  scientific.h  scientific.inl
include/geo/matrix/: mat3.h  mat3.inl  mat4.h  mat4.inl  quat.h  quat.inl
include/geo/vector/: norm3.h  norm3.inl  point3.h  point3.inl  uv2.h  uv2.inl  vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.h  vec4.inl
src/: angle.h  angle.inl  color4.h  color4.inl  geometry.h  half.h  mat3.h  mat4.h  mat4.inl  norm3.inl  point3.h  print.h  sampling.h  sampling.inl  scientific.h  test.cpp  uv2.inl  vec3.inl  vec4.h
